# edital_facil

./: .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  README.md  pyproject.toml  run.py
.github/workflows/: lint.yml
api/: __init__.py  config.py
api/extractors/: pdf_extractor.py
api/models/: __init__.py  cargo.py  edital.py
api/routes/: editais.py
api/services/: edital_service.py  llm.py
frontend/templates/: index.html
infra/: docker-compose.yml
requirements/: base.txt  dev.txt
