[project]
name = "edital-facil"
version = "0.1.0"
requires-python = ">=3.12"

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [".venv", "migrations"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "D",   # pydocstyle (docstrings)
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "S",   # flake8-bandit (segurança)
    "RUF", # ruff-specific rules
]
ignore = [
    "D100", # missing docstring in public module
    "D104", # missing docstring in public package
    "D203", # conflita com D211
    "D213", # conflita com D212
    "S101", # uso de assert (permitido em testes)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "D"]
# EN DASH nos padrões regex é intencional: PDFs governamentais usam esse caractere como separador.
"api/extractors/**" = ["RUF001"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["api"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
